--- a/environment.yml
+++ b/environment.yml
@@ -3,10 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.9
+  - python
   - notebook
   - pandas
   - geopandas
   - cartopy
   - openpyxl
   - matplotlib
+  - seaborn
